# sparkle

./: README.rst  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.yaml  documentation.yaml  feature_request.yaml
.github/workflows/: ci.yaml
sparkle/: __init__.py  phase_function.py
sparkle/tests/: test_phase_function.py
