[metadata]
name = sparkle
version = 0.0.1
author = Kyle Connour
description = Radiative transfer in Python
long_description = file: README.rst

[options]
include_package_data = True
python_requires = >= 3.10
packages = sparkle
install_requires =
   numpy
   scipy

[options.extras_require]
dev =
   pylint
   pytest